--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,34 @@
+# docker-compose.production.yml
 version: '3'
 
 volumes:
   pg_data:
   static:
+  media:
 
 services:
   db:
-    image: postgres:13
+    image: postgres:13.10
+    env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    build: ./backend/
+    build: ./backend
     env_file: .env
-  frontend:
-    env_file: .env
-    build: ./frontend/
-    command: cp -r /app/build/. /static/
     volumes:
-      - static:/static
+      - static:/backend_static
+      - media:/app/media/
+  frontend:
+    build: ./frontend
+    env_file: .env
+    command: cp -r /app/build/. /frontend_static/
+    volumes:
+      - static:/frontend_static
   gateway:
-    build: ./nginx/
+    build: ./nginx
     env_file: .env
     ports:
       - 9000:80
     volumes:
       - static:/static
+      - media:/media/
