--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,6 +3,7 @@ version: '3'
 volumes:
   pg_data_production:
   static_volume:
+  media:
 
 services:
   db:
@@ -11,20 +12,22 @@ services:
     volumes:
       - pg_data_production:/var/lib/postgresql/data
   backend:
-    image: piejin/kittygram_final_backend
+    image: piejin/kittygram_backend
     env_file: .env
     volumes:
       - static_volume:/backend_static
+      - media:/app/media/
   frontend:
-    image:  piejin/kittygram_final_frontend
+    image:  piejin/kittygram_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: piejin/kittygram_final_gateway
+    image: piejin/kittygram_gateway
     env_file: .env
     ports:
       - 9000:80
     volumes:
       - static_volume:/static
+      - media:/media/
