--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,5 @@
 server {
   listen 80;
-  index index.html;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -8,6 +7,7 @@ server {
   }
   location /admin/ {
     proxy_set_header Host $http_host;
+    proxy_pass http://backend:9000/admin/;
   }
 
   location /media/ {
@@ -16,6 +16,6 @@ server {
 
   location / {
     alias /static/;
-    try_files $uri $uri/ /index.html;
+    index /index.html;
   }
 }
