--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,11 +11,11 @@ server {
   }
 
   location /media/ {
-    alias /media/;
+    proxy_set_header Host $http_host;
+    root /app/;
   }
 
   location / {
     alias /static/;
-    index /index.html;
+    try_files $uri $uri/ /index.html;
   }
-}
