--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-Django==3.2.3
+Django==3.2.16
 djangorestframework==3.12.4
 djoser==2.1.0
 webcolors==1.11.1
@@ -9,3 +9,6 @@ pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 PyYAML==6.0
 python-decouple
+django-cors-headers==3.13.0
+gunicorn==20.1.0
+python-dotenv==0.19.0
