--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,22 +12,26 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    build: ./backend
-    env_file: .env
-    volumes:
-      - static:/backend_static
-      - media:/app/media/
-  frontend:
-    build: ./frontend
-    env_file: .env
-    command: cp -r /app/build/. /frontend_static/
-    volumes:
-      - static:/frontend_static
-  gateway:
-    build: ./nginx
+    build: ./backend/
     env_file: .env
     volumes:
       - static:/static
       - media:/media/
+    depends_on:
+      - db
+  frontend:
+    build: ./frontend/
+    env_file: .env
+    command: cp -r /app/build/. /static/
+    volumes:
+      - static:/static
+  gateway:
+    build: ./nginx/
+    env_file: .env
+    volumes:
+      - static:/static
+      - media:/media
     ports:
       - 9000:80
+    depends_on:
+      - backend
