--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 volumes:
-  pg_data_production:
-  static_volume:
+  pg_data:
+  static:
   media:
 
 services:
@@ -10,24 +10,24 @@ services:
     image: postgres:13.10
     env_file: .env
     volumes:
-      - pg_data_production:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
   backend:
     image: piejin/kittygram_backend
     env_file: .env
     volumes:
-      - static_volume:/backend_static
+      - static:/backend_static
       - media:/app/media/
   frontend:
     image:  piejin/kittygram_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static_volume:/frontend_static
+      - static:/frontend_static
   gateway:
     image: piejin/kittygram_gateway
     env_file: .env
     ports:
       - 9000:80
     volumes:
-      - static_volume:/static
+      - static:/static
       - media:/media/
