--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -172,4 +172,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен! 
+        message: Деплой kittygram успешно выполнен! 
