--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -138,7 +138,7 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
-    - name: Copy docker-compose.yml via ssh
+    - name: Copy docker-compose.production.yml via ssh
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
