--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,19 +12,19 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    image: piejin/kittygram_backend
+    image: piejin/kittygram_backend:latest
     env_file: .env
     volumes:
       - static:/backend_static
       - media:/app/media/
   frontend:
-    image:  piejin/kittygram_frontend
+    image:  piejin/kittygram_frontend:latest
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
   gateway:
-    image: piejin/kittygram_gateway
+    image: piejin/kittygram_gateway:latest
     env_file: .env
     ports:
       - 9000:80
