--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -1,10 +1,6 @@
 name: Main Kittygram workflow
-
 on:
   push:
-    branches:
-      - main
-
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -131,6 +127,7 @@ jobs:
   
   deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     needs: 
       - build_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
